# dv_ai_survey

./: .Rprofile  .env  .gitignore  README.md  _quarto.yml  config.R  data_cleaning.R  dv_ai_survey.Rproj  dv_ai_survey.html  dv_ai_survey.qmd  hello.py  open_questions.html  open_questions.qmd  output.csv  pyproject.toml  report.html  report.qmd
R-tools/: config.R  create_new_cols.R  data_cleaning.R  eda.qmd  ggplot.R  helpers.R
data/: DATA-LICENSE.md  Q4_summary.txt  cleaned.csv  final.csv  open_Q11.csv  open_Q15.csv  results.csv
data/examples/: app_extraction.json
dv_ai_survey_files/libs/bootstrap/: bootstrap-7e3ae6bc2264a23c642804a5dcfc52d8.min.css
python-tools/: pyproject.toml
python-tools/src/python_tools/: __init__.py
