[project]
name = "dv-ai-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.16.4",
    "dspy>=2.5.43",
    "jupyter>=1.1.1",
    "llvmlite>=0.41.0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numba>=0.57.0",
    "openai>=1.59.6",
    "polars>=1.19.0",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = ["python_tools"]

